CMS-3676 Responsive App Menu - Prevent jumping text when toggling items in menu

--- a/modules/wem-admin-ui/src/main/resources/web/admin/common/styles/apps/launcher/launcher.less
+++ b/modules/wem-admin-ui/src/main/resources/web/admin/common/styles/apps/launcher/launcher.less
@@ -227,6 +227,7 @@ html, body {
       width: 115px;
       height: 115px;
       margin: 0 10px 10px 0;
+      border-bottom:4px solid transparent;
       &:nth-child(3n+3) {
         margin:0 0 10px 0;
       }
